---
source: orm-tests/tests/geometry.rs
expression: results
---
[
    Company {
        id: SurrealId(
            Thing {
                tb: "company",
                id: Number(
                    32,
                ),
            },
            PhantomData<geometry::Company>,
            PhantomData<i32>,
        ),
        name: "Acme Inc.",
        founded: 1967-05-03T00:00:00Z,
        founders: [
            Person {
                name: "John Doe",
            },
            Person {
                name: "Jane Doe",
            },
        ],
        founders_multiple_nesting: [
            [
                Person {
                    name: "John Doe",
                },
                Person {
                    name: "Jane Doe",
                },
            ],
            [
                Person {
                    name: "John Doe",
                },
                Person {
                    name: "Jane Doe",
                },
            ],
        ],
        tags: [
            "foo",
            "bar",
        ],
        home: Point(
            Coord {
                x: 45.3,
                y: 78.1,
            },
        ),
    },
    Company {
        id: SurrealId(
            Thing {
                tb: "company",
                id: Number(
                    2,
                ),
            },
            PhantomData<geometry::Company>,
            PhantomData<i32>,
        ),
        name: "Apple Inc.",
        founded: 1967-05-03T00:00:00Z,
        founders: [
            Person {
                name: "John Doe",
            },
            Person {
                name: "Jane Doe",
            },
        ],
        founders_multiple_nesting: [],
        tags: [
            "foo",
            "bar",
        ],
        home: Point(
            Coord {
                x: 63.0,
                y: 21.0,
            },
        ),
    },
]
